2004-11-05  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Definition of the _STLP_HAS_NATIVE_FLOAT_ABS
	starting with MSVC .Net 2002 thanks Kevin Bluck report.

2004-11-04  Petr Ovtchenkov  <ptr@island...>

	* src/explore/Makefiles: added templates CC.mak for SunPro's CC compilers;
	ones should be checked and fixed with real compiler.

2004-11-04  Francois Dumont  <dums@stlport...>

	* stlport/stl/_function.h, _queue.h, _stack.h, _map.h, _iterator.h: 
	restoration of the Standard names of the protected datas.
	
	* stlport/stl/_alloc.h, _alloc.c: implementation of a lock free version
	of the default STLport node_allocator. Supported by the Win32 platform
	for the moment.
	
	* src/ios.cpp, locale.cpp, locale_impl.cpp: use of atomic operations
	under Win32 platform rather than using synchronisation primitives.
	
	* stlport/stl/_tree.h, _map.h, _set.h: creation of the erase_unique and
	equal_range_unique methods to use the unicity information of the map and
	set containers in binary tree searches.

	* stlport/stl/_string.h: Add _STLP_USE_NO_IOSTREAMS check beforing deciding
	not to include _string.c thanks KL
	
2004-11-02  Francois Dumont  <dums@stlport...>

	* stlport/stl/pointers/_deque.h: Fix for the problem of the deque<void*>
	instanciation thanks Alex Cosealin report

	* test/unit/ptrspec_test.cpp: Add of a test for the previous problem.

2004-10-31  Francois Dumont  <dums@stlport...>

	* stlport/stl/_rope.h: Fix of the apply_to_pieces qualification thanks Leeya.

	* test/unit/rope_test.cpp: New test case for the previous fix.

2004-10-30  Francois Dumont  <dums@stlport...>

	* src/explore/Makefiles/nmake/vc-common.mak: introductions of the LDFLAGS_A_REL
	macro to fix config problem under VC71 and VC8 beta.

2004-10-29  Petr Ovtchenkov  <ptr@island...>

	* src/explore/Makefiles/gmake/app/gcc.mak: use -fPIC for gcc 2.95.x when build
	application---this is a workaround for bug with running code in static constructors.
