@@ -20,6 +20,7 @@ SRC_CPP = cppunit/test_main.cpp \
 	bound_test.cpp \
 	bsearch_test.cpp \
 	bvector_test.cpp \
+	cmath_test.cpp \
 	copy_test.cpp \
 	count_test.cpp \
 	deque_test.cpp \
